--- a/src/components/ImageAnimation.css
+++ b/src/components/ImageAnimation.css
@@ -29,3 +29,27 @@
   margin: 10px;
   animation: jump 3s ease infinite 2s;
 }
+
+@media screen and (max-width: 480px) {
+  .image-list {
+    display: flex;
+    flex-direction: row;
+  }
+  .computer {
+    margin-left: 0;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  }
+  .tablet {
+    bottom: -600px;
+    margin-left: -250px;
+    margin-top: 3rem;
+    box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.5);
+    border-radius: 5px 5px 0 0;
+  }
+  .smartphone {
+    margin-left: 10px;
+    margin-top: 9rem;
+    box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.5);
+    border-radius: 5px 5px 0 0;
+  }
+}
