responsive about page

--- a/src/Pages/About.css
+++ b/src/Pages/About.css
@@ -3,3 +3,27 @@
   align-items: center;
   justify-content: center;
 }
+.text-typer {
+  color: #fffa;
+  font-size: 45px;
+  display: inline-block;
+}
+
+.greeting-container {
+  color: #fff;
+  font-weight: 300;
+  font-size: 10vh;
+}
+
+@media screen and (max-width: 480px) {
+  .greeting-container {
+    color: #fff;
+    font-weight: 300;
+    font-size: 5vh;
+  }
+  .text-typer {
+    color: #fffa;
+    font-size: 30px;
+    display: inline-block;
+  }
+}
