--- a/src/components/ImageAnimation.css
+++ b/src/components/ImageAnimation.css
@@ -1,5 +1,4 @@
 .image-list {
-  margin-top: 10vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -33,7 +32,6 @@
 @media screen and (max-width: 480px) {
   .image-list {
     display: flex;
-    flex-direction: row;
     margin-top: 17vh;
   }
   .computer {
@@ -52,5 +50,12 @@
     margin-top: 9rem;
     box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.5);
     border-radius: 5px 5px 0 0;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .image-list {
+    display: flex;
+    margin-top: 10vh;
   }
 }
